- Working with loops and props.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,28 +1,32 @@
 .FleetHeader {
-  text-align: center;
+    text-align: center;
 }
 
 .logo {
-  animation: logo-spin infinite 20s linear;
-  height: 80px;
+    animation: logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .FleetHeader-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .title {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .intro {
-  font-size: large;
+    font-size: large;
 }
 
 @keyframes logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
